# Distributed_GA

./: .gitignore  BaseModels.py  Code_docs.md  README.md  Slurm.py  backend_docs.md  client_setup.sh  params.yaml  pyproject.toml  requirements.txt  server_callback.sh  setup.py  slurm_client_example.py
DGA/: Algorithm.py  Client.py  File_IO.py  Gene.py  Local.py  Model.py  Plotting.py  Pool.py  Server.py  Server_SLURM.py  Server_SLURM_async.py  Server_async.py  old_Gene.py  pool_functions.py
SLURM/: Algorithm.py  Algorithm_portalocker.py  Client.py  Evaluator.py  Example.py  GA.py  README.md  Server.py  Server_SLURM.py  clear_test_dir.py  directory_locking.py  ga_alg.py  pool_functions.py  popen_test.py  popen_test_runner.py  run_client.sh  run_evaluator.py  run_server.sh  test_GA.py
diagrams/: DGA.drawio  DGA_diagram_0.drawio  DGA_diagram_1.drawio  code_docs.drawio
gRPC/: Clients.py  EA.py  Models.py  Server.proto  Server.py  Server_pb2.py  Server_pb2.pyi  Server_pb2_grpc.py
scripts/: clear_test_dir.py
scripts/ANN_example/: ANN_Example.py  Evaluator.py  Standalone_ANN.py  arg_reader.py
scripts/Example_Scripts/: Vector_Task.py
scripts/GA_examples/: Complex_GA_Example.py  Simple_GA_Example.py
scripts/Hananel_Algorithm/: Evaluator.py  Hananel_Algorithm.py  Hananel_Genome.py  main.py
scripts/Local_example/: Graph_search.ipynb  Local_example.py
scripts/MNIST/: MNIST_Model.py  eval.py  main.py  results_plotter.py
scripts/Notebooks/: Model_Analysis.ipynb
scripts/SLURM_example/: SLURM_GA_Example.py  sbatch_script.sh  seff_test.py  test_run.py  (+1 more)
(+26 files in other folders)
