[project]
version = "0.1.0"
name = "Distributed-Computing-Project-Genetic-Algorithm"
description = "Distributed Computing Project Genetic Algorithm"


[build-system]
requires = [
"setuptools", "wheel",
"numpy==1.24.3",
"portalocker==2.7.0",
"jsbeautifier==1.14.9",
"filelock==3.12.0",
]


[tool.setuptools]
py-modules = ["DGA"]
