[project]
name = "Distributed-Genetic-Algorithms"
version = "0.0.1"
dependencies = [
    "numpy>=1.24.3",
    "portalocker>=2.7.0",
    "jsbeautifier>=1.14.9",
    "matplotlib",
    "PySide2; sys_platform == 'linux'"
]

[build-system]
requires = [
"setuptools",
]
build-backend = "setuptools.build_meta"


[tool.setuptools]
py-modules = ["DGA"]
