[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", 'numpy', 'portalocker', 'jsbeautifier', 'matplotlib', 'PySide2']

[project]
name = "DGA"
version = "0.0.1"
authors = [
  { name="Christopher T. Earl", email="cearl@umass.edu" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["setuptools", 'numpy', 'portalocker', 'jsbeautifier', 'matplotlib', 'PySide2']

[project.urls]
Homepage = "https://github.com/cearlUmass/Distributed_GA"

[tool.setuptools]
py-modules = []
